--- a/AWS-Lambda-Policies/cfn.yml
+++ b/AWS-Lambda-Policies/cfn.yml
@@ -7,7 +7,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: index.handler
-      Runtime: nodejs6.10
+      Runtime: nodejs12.x
       CodeUri: ./
       Policies:
         # Instead of using the AWS Managed Policy "AWSLambdaBasicExecutionRole"
@@ -26,7 +26,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: index.handler
-      Runtime: nodejs6.10
+      Runtime: nodejs12.x
       CodeUri: ./
       Policies:
         # In this case both policies have the same result, but you could replace them by whatever you want.
@@ -45,7 +45,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: index.handler
-      Runtime: nodejs6.10
+      Runtime: nodejs12.x
       CodeUri: ./
       Policies:
         - Version: '2012-10-17'
