--- a/AWS-Lambda-Register-To-S3-Updates/cfn.yml
+++ b/AWS-Lambda-Register-To-S3-Updates/cfn.yml
@@ -7,7 +7,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: index.handler
-      Runtime: nodejs6.10
+      Runtime: nodejs12.x
       CodeUri: ./
       Policies:
         # This Lambda is using the managed policy AWSLambdaExecute
