--- a/AWS-Lambda-Serverless-Apis/cfn.yml
+++ b/AWS-Lambda-Serverless-Apis/cfn.yml
@@ -7,7 +7,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: index.handler
-      Runtime: nodejs6.10
+      Runtime: nodejs12.x
       CodeUri: ./
       Policies:
         - AWSLambdaBasicExecutionRole
@@ -22,7 +22,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: index.handler
-      Runtime: nodejs6.10
+      Runtime: nodejs12.x
       CodeUri: ./
       Policies:
         - AWSLambdaBasicExecutionRole
